--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   </head>
   <body>
     <h1>Hello, GitHub Pages!</h1>
+    <a href="miclaro://review"><i class="fa fa-star"></i> Me das 5 estrellitas</a>
   </body>
 </html>
