--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   </head>
   <body>
     <h1>Hello, GitHub Pages!</h1>
-    <a href="miclaro://review"><i class="fa fa-star"></i><i class="fa fa-star"><i class="fa fa-star"><i class="fa fa-star"><i class="fa fa-star"> Me das 5 estrellitas?</a>
+    <a href="https://github.com/your-username/your-repo" style="text-decoration: none; color: inherit;">
+      <i class="fa fa-star" aria-hidden="true"></i>
+      <i class="fa fa-star" aria-hidden="true"></i>
+      <i class="fa fa-star" aria-hidden="true"></i>
+      <i class="fa fa-star" aria-hidden="true"></i>
+      <i class="fa fa-star" aria-hidden="true"></i>
+  Me das 5 estrellitas?
+</a>
   </body>
 </html>
