--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Hello, GitHub Pages!</h1>
-    <a href="https://github.com/your-username/your-repo" style="text-decoration: none; color: inherit;">
+    <a href="miclaro://review" style="text-decoration: none; color: inherit;">
       <i class="fa fa-star" aria-hidden="true"></i>
       <i class="fa fa-star" aria-hidden="true"></i>
       <i class="fa fa-star" aria-hidden="true"></i>
