--- a/index.html
+++ b/index.html
@@ -8,12 +8,25 @@
       font-family: monospace;
       background: #f9f9f9;
       padding: 20px;
+      font-size: 18px;
+      line-height: 1.5;
+      color: #333;
     }
     #debug {
       background: #eee;
       border-radius: 8px;
       padding: 15px;
       white-space: pre-wrap;
+      font-size: 20px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    }
+    @media (max-width: 400px) {
+      body {
+        font-size: 22px;
+      }
+      #debug {
+        font-size: 24px;
+      }
     }
   </style>
 </head>
