--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
         window.matchMedia('(display-mode: standalone)').matches
       ) {
         reviewLink.style.display = 'inline-block';
+        console.log("inline-block");
       } else {
         reviewLink.style.display = 'none';
+        console.log("none");
       }
     });
   </script>
