--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 
       const reviewLink = document.getElementById('review-link');
       console.log('document.referrer:', referrer);
-console.log('referrer.startsWith:', referrer.startsWith('android-app://ar.claro.com.android'));
+console.log('document.referrer.startsWith:', document.referrer.startsWith('android-app://ar.claro.com.android'));
 console.log('display-mode standalone:', window.matchMedia('(display-mode: standalone)').matches);
 
       if (
-        referrer.startsWith('android-app://ar.claro.com.android') &&
+        document.referrer.startsWith('android-app://ar.claro.com.android') &&
         window.matchMedia('(display-mode: standalone)').matches
       ) {
         reviewLink.style.display = 'inline-block';
