--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ console.log('document.referrer.startsWith:', document.referrer.startsWith('andro
 console.log('display-mode standalone:', window.matchMedia('(display-mode: standalone)').matches);
 
       if (
-        document.referrer.startsWith('android-app://ar.claro.com.android') &&
+        document.referrer.startsWith('android-app://ar.com.claro.android') &&
         window.matchMedia('(display-mode: standalone)').matches
       ) {
         reviewLink.style.display = 'inline-block';
